--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="div4" class="cotent">
             <h1>Welcome</h1>
-            <a href="pages/page1.html">Go to Page 1</a>
+            <a href="pages/page1.html">Goo to Page 1</a>
         </div>
     </div>
     <div id="div3" class="Footer">(c) 2023 Tous les droit réserves ANESRIF</div>
